--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  Automation-Assignment:
+  GUI_Web:
     name: Run Automation-Assignment Tests
     runs-on: ${{ matrix.os }}
     strategy:
@@ -39,9 +39,9 @@ jobs:
         run: |
           cd Automation-Assignment/
           if [ "$RUNNER_OS" == "Linux" ]; then
-               mvn test -DexecutionAddress="localhost:4444" -DtargetOperatingSystem="Linux-64" -DmaximumPerformanceMode="2" -DtargetBrowserName="GoogleChrome"
+               mvn test -DexecutionAddress="localhost:4444" -DtargetOperatingSystem="Linux-64" -DmaximumPerformanceMode="2" -DtargetBrowserName="GoogleChrome" -DgenerateAllureReportArchive="true" -Dtest=".*TestClass.*"
           elif [ "$RUNNER_OS" == "macOS" ]; then
-               mvn test -DexecutionAddress="browserstack" -DtargetOperatingSystem="Mac-64" -DmaximumPerformanceMode="1" -DtargetBrowserName="Safari" 
+               mvn test -DexecutionAddress="browserstack" -DtargetOperatingSystem="Mac-64" -DmaximumPerformanceMode="1" -DtargetBrowserName="Safari" "-DbrowserStack.os=OS X" "-DbrowserStack.osVersion=Monterey" "-DbrowserStack.browserVersion=15.3" -DgenerateAllureReportArchive="true" -Dtest=".*TestClass.*"
           else
                echo "$RUNNER_OS not supported"
                exit 1
@@ -67,8 +67,8 @@ jobs:
           name: ${{ runner.os }} - Desktop Browsers Tests Extent Report
           path: "Automation-Assignment/extent-reports/ExtentReports_*.html"
           
-  Automation-Assignment:
-    name: Run Automation-Assignment Tests
+  GUI_Web_Basic:
+    name: Run Automation_Assignment Tests
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -125,8 +125,8 @@ jobs:
           name: ${{ runner.os }} - Desktop Browsers Tests Extent Report
           path: "Automation-Assignment/extent-reports/ExtentReports_*.html"
           
-  Automation-Assignment_Cucumber:
-    name: Run Automation-Assignment_Cucumber Tests
+  GUI_Web_Cucumber:
+    name: Run GUI_Web_Cucumber Tests
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -153,7 +153,7 @@ jobs:
         if: runner.os != 'Windows'
         continue-on-error: true
         run: |
-          cd Automation-Assignment_Cucumber/
+          cd GUI_Web_Cucumber/
           if [ "$RUNNER_OS" == "Linux" ]; then
                mvn test -DexecutionAddress="localhost:4444" -DtargetOperatingSystem="Linux-64" -DmaximumPerformanceMode="2" -DtargetBrowserName="GoogleChrome" -DgenerateAllureReportArchive="true" -Dtest=".*CucumberTestRunner.*"
           elif [ "$RUNNER_OS" == "macOS" ]; then
@@ -166,7 +166,7 @@ jobs:
         if: runner.os == 'Windows'
         continue-on-error: true
         run: |
-          cd Automation-Assignment_Cucumber/
+          cd GUI_Web_Cucumber/
           mvn test -DexecutionAddress="local" -DtargetOperatingSystem="Windows-64" -DmaximumPerformanceMode="2" -DtargetBrowserName="MicrosoftEdge" -DgenerateAllureReportArchive="true" -Dtest=".*CucumberTestRunner.*"
 
       - name: Upload Allure Report as Pipeline Artifact
@@ -174,11 +174,11 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: ${{ runner.os }} - Desktop Browsers Tests Allure Report
-          path: "Automation-Assignment/generatedReport_*.zip"
+          path: "GUI_Web_Cucumber/generatedReport_*.zip"
 
       - name: Upload Extent Report as Pipeline Artifact
         if: always()
         uses: actions/upload-artifact@v3
         with:
           name: ${{ runner.os }} - Desktop Browsers Tests Extent Report
-          path: "Automation-Assignment/extent-reports/ExtentReports_*.html"
+          path: "GUI_Web_Cucumber/extent-reports/ExtentReports_*.html"
